tests/baselines/reference/chainedAssignment3.errors.txt
==== tests/cases/compiler/chainedAssignment3.ts (2 errors) ====
    class A {
        id: number;
    }
    
    class B extends A {
        value: string;
    }
    
    var a: A;
    var b: B;
    a = b = null;
    a = b = new B();
    b = a = new B();
    
    a.id = b.value = null;
    
    // error cases
    b = a = new A();
    ~
!!! error TS2012: Cannot convert 'A' to 'B':
!!! 	Type 'A' is missing property 'value' from type 'B'.
    a = b = new A();
        ~
!!! error TS2012: Cannot convert 'A' to 'B':
!!! 	Type 'A' is missing property 'value' from type 'B'.
    
    
    